sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: not found: value j
  	for (i <- 1 to longueur-1-j){
                                  ^AlgBubbleSort3:10: error: not found: value NbrEch
        NbrEch=NbrEch+1
        ^